style: apply prettier rules

--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,11 @@
 body {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
-  background-color: #f0f0f0; /* Light gray background */
-  display: flex; /* Use flexbox layout */
-  justify-content: center; /* Center horizontally */
-  align-items: center; /* Center vertically */
-  height: 100vh; /* Full viewport height */
-  margin: 0; /* Remove default margin */
+  background-color: #f0f0f0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
 }
 
 .container {
@@ -19,25 +19,26 @@ body {
 }
 
 .flip-clock .digit {
-  display: inline-flex; /* Use flexbox layout */
-  align-items: center; /* Center vertically */
-  justify-content: center; /* Center horizontally */
-  
-  height: 1.5em; /* Set a fixed height for each digit */
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+
+  height: 1.5em;
   position: relative;
   transform-style: preserve-3d;
-  padding: 0; /* Padding around the digits */
-  margin: 1px; /* Margin between digits */
+  padding: 0;
+  margin: 1px;
 }
 
 .flip-clock .digit.card {
-  width: 0.9em; /* Set a fixed width for each digit */
-  background-color: #001f3f; /* Dark blue background */
-  color: white; /* White text color */
-  border-radius: 0.1em; /* Slightly rounded corners */
-  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), /* Top highlight */
-              inset 0 -1px 0 rgba(0, 0, 0, 0.2), /* Bottom shadow */
-              0 2px 5px rgba(0, 0, 0, 0.3); /* Outer shadow */
+  width: 0.9em;
+  background-color: #001f3f;
+  color: white;
+  border-radius: 0.1em;
+  box-shadow:
+    inset 0 1px 0 rgba(255, 255, 255, 0.2),
+    inset 0 -1px 0 rgba(0, 0, 0, 0.2),
+    0 2px 5px rgba(0, 0, 0, 0.3);
 }
 
 .flip-clock .digit.slide {
@@ -51,17 +52,17 @@ body {
   font-size: 1em;
   font-weight: bold;
   color: white;
-  background-color: #001f3f; /* Dark blue */
+  background-color: #001f3f;
   border: none;
   border-radius: 0.25em;
-  text-decoration: none; /* Remove underline */
+  text-decoration: none;
   cursor: pointer;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2); /* Button shadow */
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
   transition: background-color 0.3s ease;
 }
 
 .button:hover {
-  background-color: #003263; /* Darker blue on hover */
+  background-color: #003263;
 }
 
 @keyframes slide {
